--- a/pages/templates/index.html
+++ b/pages/templates/index.html
@@ -7,58 +7,24 @@
 {% block body %}
     <!-- Blog Entries Column -->
     <div class="col-md-8">
-    <div class="mb-4"></div>
-        <!-- Blog Post -->
-        <div class="card mb-4">
-            <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
-            <div class="card-body">
-                <h2 class="card-title">Post Title</h2>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus possimus, veniam magni quis!</p>
-                <a href="#" class="btn btn-primary">Read More &rarr;</a>
-            </div>
-            <div class="card-footer text-muted">
-                Posted on January 1, 2020 by
-                <a href="#">Start Bootstrap</a>
-            </div>
-        </div>
+        <div class="mb-4"></div>
 
-        <!-- Blog Post -->
-        <div class="card mb-4">
-            <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
-            <div class="card-body">
-                <h2 class="card-title">Post Title</h2>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus possimus, veniam magni quis!</p>
-                <a href="#" class="btn btn-primary">Read More &rarr;</a>
+        {% for article in object_list %}
+            <div class="card mb-4">
+                <img class="card-img-top" src="{{ article.image.url }}" alt="Card image cap">
+                <div class="card-body">
+                    <h2 class="card-title">{{ article.title }}</h2>
+                    <p class="card-text">{{ article.content|striptags|truncatechars:200 }}</p>
+                    <a href="{{ article.get_url }}" class="btn btn-primary">Tamamını Gör &rarr;</a>
+                </div>
+                <div class="card-footer text-muted">
+                    {{ article.created_at }} by
+                    <a href="#">{{ article.author.get_full_name }}</a>
+                </div>
             </div>
-            <div class="card-footer text-muted">
-                Posted on January 1, 2020 by
-                <a href="#">Start Bootstrap</a>
-            </div>
-        </div>
+        {% endfor %}
 
-        <!-- Blog Post -->
-        <div class="card mb-4">
-            <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
-            <div class="card-body">
-                <h2 class="card-title">Post Title</h2>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus possimus, veniam magni quis!</p>
-                <a href="#" class="btn btn-primary">Read More &rarr;</a>
-            </div>
-            <div class="card-footer text-muted">
-                Posted on January 1, 2020 by
-                <a href="#">Start Bootstrap</a>
-            </div>
-        </div>
-
-        <!-- Pagination -->
-        <ul class="pagination justify-content-center mb-4">
-            <li class="page-item">
-                <a class="page-link" href="#">&larr; Older</a>
-            </li>
-            <li class="page-item disabled">
-                <a class="page-link" href="#">Newer &rarr;</a>
-            </li>
-        </ul>
+        {% include 'pages/snippets/pagination.html' %}
 
     </div>
 {% endblock body %}
