--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -1,3 +1,5 @@
+{% load static helper_tags %}
+{% load_sidebar_category as sidebar_category %}
 {% block sidebar %}
     <!-- Sidebar Widgets Column -->
     <div class="col-md-4">
@@ -7,10 +9,12 @@
             <h5 class="card-header">Search</h5>
             <div class="card-body">
                 <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Search for...">
-                    <span class="input-group-append">
-                <button class="btn btn-secondary" type="button">Go!</button>
-              </span>
+                    <form action="{% url 'articles:search' %}" method="get" class="d-flex justify-content-between w-100">
+                        <input type="text" name="q" class="form-control" value="{{ request.GET.q }}" placeholder="Search for...">
+                                <span class="input-group-append">
+                        <button class="btn btn-secondary ml-1" type="submit">Ara!</button>
+                      </span>
+                    </form>
                 </div>
             </div>
         </div>
@@ -22,41 +26,21 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <ul class="list-unstyled mb-0">
-                            <li>
-                                <a href="#">Web Design</a>
-                            </li>
-                            <li>
-                                <a href="#">HTML</a>
-                            </li>
-                            <li>
-                                <a href="#">Freebies</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="col-lg-6">
-                        <ul class="list-unstyled mb-0">
-                            <li>
-                                <a href="#">JavaScript</a>
-                            </li>
-                            <li>
-                                <a href="#">CSS</a>
-                            </li>
-                            <li>
-                                <a href="#">Tutorials</a>
-                            </li>
-                        </ul>
-                    </div>
+                            {% for category in sidebar_category %}
+                                <li>
+                                    <a href="{% url 'articles:category' category.slug %}">{{ category.name }}</a>
+                                </li>
+                                {% if forloop.counter == 3 %}
+                                    </ul>
+                                    </div>
+                                    <div class="col-lg-6">
+                                    <ul class="list-unstyled mb-0">
+                                {% endif %}
+                            {% endfor %}
+                            </ul>
+                            </div>
                 </div>
             </div>
         </div>
-
-        <!-- Side Widget -->
-        <div class="card my-4">
-            <h5 class="card-header">Side Widget</h5>
-            <div class="card-body">
-                You can put anything you want inside of these side widgets. They are easy to use, and feature the new Bootstrap 4 card containers!
-            </div>
-        </div>
-
     </div>
 {% endblock sidebar %}
